# logika_du2

./: .gitignore  CMakeLists.txt  Makefile
src/: cchi.cpp  lphelper.hpp  testlp.cpp
